<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/layout" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="#fffafafa" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/pause_new" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@+id/imv_record" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_pause_black_24dp" />
            <TextView android:textSize="12.0sp" android:textColor="@color/text_color" android:ellipsize="middle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/pause" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/resume_new" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="436F70797269676874206279204C7562755465616D2E636F6D5F2B3834393731393737373937" />
            <ImageView android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_play_arrow_black_24dp" android:layout_centerHorizontal="true" />
            <TextView android:textSize="12.0sp" android:textColor="@color/text_color" android:ellipsize="middle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/resume" android:singleLine="true" android:layout_centerHorizontal="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/stop_new" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:background="@drawable/ic_stop_black_24dp" android:layout_width="30.0dip" android:layout_height="30.0dip" android:tint="#ffe53935" />
            <TextView android:textSize="12.0sp" android:textColor="@color/text_color" android:ellipsize="middle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/stop" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/tools_new" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:padding="2.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_tools_app" android:tint="#ffe53935" />
            <TextView android:textSize="12.0sp" android:textColor="@color/text_color" android:ellipsize="middle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/tools" android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>